DOC-2215: add mce-clipboard demo to advanced tempaltes new feature sub-section.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -162,6 +162,7 @@ The string to add is as follows: `+{{mce-clipboard}}+`.
 
 Whenever a user inserts a template containing the `+{{mce-clipboard}}+` marker, the editor will replace those markers with the actual content from the clipboard.
 
+liveDemo::{plugincode}-mce-clipboard[]
 
 [[options]]
 == Options
