--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -337,6 +337,11 @@ As a consequence, the plugin failed to detect if the selection was at the beginn
 
 === A closing notification brings focus to the editor even when focus is outside of the editor
 // #TINY-10282
+Previously {productname}'s notification system would return focus back to the editor UI even in situations when the user "clicked" on the close button, and in situations when the `focus` was external to the editor UI.
+
+As a consequence, the `focus` would consistently shift back to the editor, irrespective of its current location.
+
+{productname} 6.8 addresses this issue, now, the focus is only retained within the editor if the notification closure was initiated by user interaction.
 
 === Selecting a cell with only `&nbsp;` in a table inside a `td` and then press `backspace` the entire table is deleted
 // #TINY-10254
