DOC-2209: Added docs for the new default_font_size option

--- a/modules/ROOT/pages/user-formatting-options.adoc
+++ b/modules/ROOT/pages/user-formatting-options.adoc
@@ -4,6 +4,8 @@
 
 include::partial$configuration/block_formats.adoc[]
 
+include::partial$configuration/default_font_stack.adoc[]
+
 include::partial$configuration/font_family_formats.adoc[]
 
 include::partial$configuration/font_size_formats.adoc[]
