--- a/modules/ROOT/pages/security.adoc
+++ b/modules/ROOT/pages/security.adoc
@@ -90,7 +90,7 @@ For information on Injection-related security issues and how to reduce the risk 
 include::partial$security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc[]
 
 [[securing-embedded-external-resources]]
-=== Securing-embedded-external-resources
+=== Securing embedded external resources
 
 include::partial$security/securing-embedded-external-resources.adoc[]
 
