--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -317,8 +317,8 @@ Previously the `<object>` and `<embed>` elements, similar to `<iframe>` elements
 
 {productname} 6.8 addresses this by introducing a new `convert_unsafe_embeds` boolean option. When set to `true`, `<object>` and `<embed>` elements will be converted to different safer alternatives based on their embedded content's MIME type, set via the `type` attribute:
 
-* an image MIME type (starts with `image/`) will be converted to the `<img>` element; and
-* a video MIME type (starts with `video/`) will be converted to the `<video>` element; and
+* an image MIME type (starts with `image/`) will be converted to the `<img>` element;
+* a video MIME type (starts with `video/`) will be converted to the `<video>` element;
 * an audio MIME type (starts with `audio/`) will be converted to the `<audio>` element; and
 * any other MIME type or if it is unspecified will be converted to the `<iframe>` element.
 
